gram/src/cs/gram/gen/M7/TFGGramParser.js
// Generated from /home/morcu/bot/git_folder/morcu-bot/gram/src/cs/gram/gen/M7/TFGGram.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TFGGramVisitor = require('./TFGGramVisitor').TFGGramVisitor;

var grammarFileName = "TFGGram.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'titulo'", null, "'miedo'", null, null, null, 
                     null, null, "'deportes'", null, null, null, null, null, 
                     "'quiero'", "'ver'", "'ense\u00F1ame'", "'tienes'", 
                     null, "'parecida'", "'como'", "'gracias'", "'genial'", 
                     "'perfecto'", "'bien'", "'mal'", null, "'me'", null, 
                     "'seleccion'", "'ahora'", "'si'", "'ole'", "'acabo'", 
                     "'de'", "'verla'", "'la'", "'guardo'", "'para'", "'mas'", 
                     "'tarde'", null, null, null, "'era'", null, "'adios'", 
                     "'vere'", "'pero'", "'no'", "'convences'", "'nada'", 
                     "'muy'", "'negativo'", "'bye'", "'hasta'", "'luego'", 
                     "'voy'", "'ma\u00F1ana'", "'a'", "'trabajar'", "'un'", 
                     "'rato'", "'pronto'", "'chao'", "'es'", "'todo'", "'serie'", 
                     null, "'por'", "'hoy'", "'noches'", null, "'tardes'", 
                     null, "'ya'", "'has'", "'otra'", "'vuelto'", "'que'", 
                     "'hayas'", "'estoy'", "'nuevo'", "'vez'", "'empezar'", 
                     null, "'prueba'", "'una'", null, "'aqui'" ];

var symbolicNames = [ null, "TITULO", "COMEDIA", "MIEDO", "DRAMA", "AVENTURA", 
                      "ACCION", "FICCION", "ROMANTICA", "DEPORTES", "DOCUMENTAL", 
                      "ENTRETENIMIENTO", "PENSAR", "CLASICA", "SUSPENSE", 
                      "QUIERO", "VER", "ENSENAME", "TIENES", "ALGO", "PARECIDA", 
                      "COMO", "GRACIAS", "GENIAL", "PERFECTO", "BIEN", "MAL", 
                      "BUENA", "ME", "GUSTA", "SELECCION", "AHORA", "SI", 
                      "OLE", "ACABO", "DE", "VERLA", "LA", "GUARDO", "PARA", 
                      "MAS", "TARDE", "RECOMENDACION", "ESTA", "ESA", "ERA", 
                      "PARECE", "ADIOS", "VERE", "PERO", "NO", "CONVENCES", 
                      "NADA", "MUY", "NEGATIVO", "BYE", "HASTA", "LUEGO", 
                      "VOY", "MANANA", "A", "TRABAJAR", "UN", "RATO", "PRONTO", 
                      "CHAO", "ES", "TODO", "SERIE", "PELICULA", "POR", 
                      "HOY", "NOCHES", "HOLA", "TARDES", "BOT", "YA", "HAS", 
                      "OTRA", "VUELTO", "QUE", "HAYAS", "ESTOY", "NUEVO", 
                      "VEZ", "EMPEZAR", "DIAS", "PRUEBA", "UNA", "TAL", 
                      "AQUI", "WS", "PUNT" ];

var ruleNames =  [ "intents", "intent", "tfg_intent_find", "tipo_contenido", 
                   "titulo", "genero", "tfg_intent_recommendC2C", "feedback", 
                   "positivo", "negativo", "tfg_intent_bye", "tfg_intent_saludo" ];

function TFGGramParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TFGGramParser.prototype = Object.create(antlr4.Parser.prototype);
TFGGramParser.prototype.constructor = TFGGramParser;

Object.defineProperty(TFGGramParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TFGGramParser.EOF = antlr4.Token.EOF;
TFGGramParser.TITULO = 1;
TFGGramParser.COMEDIA = 2;
TFGGramParser.MIEDO = 3;
TFGGramParser.DRAMA = 4;
TFGGramParser.AVENTURA = 5;
TFGGramParser.ACCION = 6;
TFGGramParser.FICCION = 7;
TFGGramParser.ROMANTICA = 8;
TFGGramParser.DEPORTES = 9;
TFGGramParser.DOCUMENTAL = 10;
TFGGramParser.ENTRETENIMIENTO = 11;
TFGGramParser.PENSAR = 12;
TFGGramParser.CLASICA = 13;
TFGGramParser.SUSPENSE = 14;
TFGGramParser.QUIERO = 15;
TFGGramParser.VER = 16;
TFGGramParser.ENSENAME = 17;
TFGGramParser.TIENES = 18;
TFGGramParser.ALGO = 19;
TFGGramParser.PARECIDA = 20;
TFGGramParser.COMO = 21;
TFGGramParser.GRACIAS = 22;
TFGGramParser.GENIAL = 23;
TFGGramParser.PERFECTO = 24;
TFGGramParser.BIEN = 25;
TFGGramParser.MAL = 26;
TFGGramParser.BUENA = 27;
TFGGramParser.ME = 28;
TFGGramParser.GUSTA = 29;
TFGGramParser.SELECCION = 30;
TFGGramParser.AHORA = 31;
TFGGramParser.SI = 32;
TFGGramParser.OLE = 33;
TFGGramParser.ACABO = 34;
TFGGramParser.DE = 35;
TFGGramParser.VERLA = 36;
TFGGramParser.LA = 37;
TFGGramParser.GUARDO = 38;
TFGGramParser.PARA = 39;
TFGGramParser.MAS = 40;
TFGGramParser.TARDE = 41;
TFGGramParser.RECOMENDACION = 42;
TFGGramParser.ESTA = 43;
TFGGramParser.ESA = 44;
TFGGramParser.ERA = 45;
TFGGramParser.PARECE = 46;
TFGGramParser.ADIOS = 47;
TFGGramParser.VERE = 48;
TFGGramParser.PERO = 49;
TFGGramParser.NO = 50;
TFGGramParser.CONVENCES = 51;
TFGGramParser.NADA = 52;
TFGGramParser.MUY = 53;
TFGGramParser.NEGATIVO = 54;
TFGGramParser.BYE = 55;
TFGGramParser.HASTA = 56;
TFGGramParser.LUEGO = 57;
TFGGramParser.VOY = 58;
TFGGramParser.MANANA = 59;
TFGGramParser.A = 60;
TFGGramParser.TRABAJAR = 61;
TFGGramParser.UN = 62;
TFGGramParser.RATO = 63;
TFGGramParser.PRONTO = 64;
TFGGramParser.CHAO = 65;
TFGGramParser.ES = 66;
TFGGramParser.TODO = 67;
TFGGramParser.SERIE = 68;
TFGGramParser.PELICULA = 69;
TFGGramParser.POR = 70;
TFGGramParser.HOY = 71;
TFGGramParser.NOCHES = 72;
TFGGramParser.HOLA = 73;
TFGGramParser.TARDES = 74;
TFGGramParser.BOT = 75;
TFGGramParser.YA = 76;
TFGGramParser.HAS = 77;
TFGGramParser.OTRA = 78;
TFGGramParser.VUELTO = 79;
TFGGramParser.QUE = 80;
TFGGramParser.HAYAS = 81;
TFGGramParser.ESTOY = 82;
TFGGramParser.NUEVO = 83;
TFGGramParser.VEZ = 84;
TFGGramParser.EMPEZAR = 85;
TFGGramParser.DIAS = 86;
TFGGramParser.PRUEBA = 87;
TFGGramParser.UNA = 88;
TFGGramParser.TAL = 89;
TFGGramParser.AQUI = 90;
TFGGramParser.WS = 91;
TFGGramParser.PUNT = 92;

TFGGramParser.RULE_intents = 0;
TFGGramParser.RULE_intent = 1;
TFGGramParser.RULE_tfg_intent_find = 2;
TFGGramParser.RULE_tipo_contenido = 3;
TFGGramParser.RULE_titulo = 4;
TFGGramParser.RULE_genero = 5;
TFGGramParser.RULE_tfg_intent_recommendC2C = 6;
TFGGramParser.RULE_feedback = 7;
TFGGramParser.RULE_positivo = 8;
TFGGramParser.RULE_negativo = 9;
TFGGramParser.RULE_tfg_intent_bye = 10;
TFGGramParser.RULE_tfg_intent_saludo = 11;

function IntentsContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGGramParser.RULE_intents;
    return this;
}

IntentsContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntentsContext.prototype.constructor = IntentsContext;

IntentsContext.prototype.intent = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(IntentContext);
    } else {
        return this.getTypedRuleContext(IntentContext,i);
    }
};

IntentsContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGGramVisitor ) {
        return visitor.visitIntents(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGGramParser.IntentsContext = IntentsContext;

TFGGramParser.prototype.intents = function() {

    var localctx = new IntentsContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TFGGramParser.RULE_intents);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 25; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 24;
            this.intent();
            this.state = 27; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TFGGramParser.QUIERO) | (1 << TFGGramParser.ENSENAME) | (1 << TFGGramParser.TIENES) | (1 << TFGGramParser.ALGO) | (1 << TFGGramParser.GRACIAS) | (1 << TFGGramParser.BIEN) | (1 << TFGGramParser.BUENA) | (1 << TFGGramParser.ME))) !== 0) || ((((_la - 37)) & ~0x1f) == 0 && ((1 << (_la - 37)) & ((1 << (TFGGramParser.LA - 37)) | (1 << (TFGGramParser.ESTA - 37)) | (1 << (TFGGramParser.ADIOS - 37)) | (1 << (TFGGramParser.VERE - 37)) | (1 << (TFGGramParser.NO - 37)) | (1 << (TFGGramParser.NADA - 37)) | (1 << (TFGGramParser.HASTA - 37)) | (1 << (TFGGramParser.CHAO - 37)) | (1 << (TFGGramParser.ES - 37)))) !== 0) || ((((_la - 69)) & ~0x1f) == 0 && ((1 << (_la - 69)) & ((1 << (TFGGramParser.PELICULA - 69)) | (1 << (TFGGramParser.HOLA - 69)) | (1 << (TFGGramParser.YA - 69)) | (1 << (TFGGramParser.EMPEZAR - 69)) | (1 << (TFGGramParser.UNA - 69)))) !== 0));
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function IntentContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGGramParser.RULE_intent;
    return this;
}

IntentContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
IntentContext.prototype.constructor = IntentContext;

IntentContext.prototype.tfg_intent_find = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Tfg_intent_findContext);
    } else {
        return this.getTypedRuleContext(Tfg_intent_findContext,i);
    }
};

IntentContext.prototype.tfg_intent_recommendC2C = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Tfg_intent_recommendC2CContext);
    } else {
        return this.getTypedRuleContext(Tfg_intent_recommendC2CContext,i);
    }
};

IntentContext.prototype.tfg_intent_saludo = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Tfg_intent_saludoContext);
    } else {
        return this.getTypedRuleContext(Tfg_intent_saludoContext,i);
    }
};

IntentContext.prototype.tfg_intent_bye = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(Tfg_intent_byeContext);
    } else {
        return this.getTypedRuleContext(Tfg_intent_byeContext,i);
    }
};

IntentContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGGramVisitor ) {
        return visitor.visitIntent(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGGramParser.IntentContext = IntentContext;

TFGGramParser.prototype.intent = function() {

    var localctx = new IntentContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TFGGramParser.RULE_intent);
    try {
        this.state = 49;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,5,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 30; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 29;
            		this.tfg_intent_find();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 32; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,1, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 35; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 34;
            		this.tfg_intent_recommendC2C();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 37; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,2, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 40; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 39;
            		this.tfg_intent_saludo();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 42; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,3, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 45; 
            this._errHandler.sync(this);
            var _alt = 1;
            do {
            	switch (_alt) {
            	case 1:
            		this.state = 44;
            		this.tfg_intent_bye();
            		break;
            	default:
            		throw new antlr4.error.NoViableAltException(this);
            	}
            	this.state = 47; 
            	this._errHandler.sync(this);
            	_alt = this._interp.adaptivePredict(this._input,4, this._ctx);
            } while ( _alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER );
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Tfg_intent_findContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGGramParser.RULE_tfg_intent_find;
    return this;
}

Tfg_intent_findContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Tfg_intent_findContext.prototype.constructor = Tfg_intent_findContext;

Tfg_intent_findContext.prototype.QUIERO = function() {
    return this.getToken(TFGGramParser.QUIERO, 0);
};

Tfg_intent_findContext.prototype.VER = function() {
    return this.getToken(TFGGramParser.VER, 0);
};

Tfg_intent_findContext.prototype.titulo = function() {
    return this.getTypedRuleContext(TituloContext,0);
};

Tfg_intent_findContext.prototype.LA = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TFGGramParser.LA);
    } else {
        return this.getToken(TFGGramParser.LA, i);
    }
};


Tfg_intent_findContext.prototype.tipo_contenido = function() {
    return this.getTypedRuleContext(Tipo_contenidoContext,0);
};

Tfg_intent_findContext.prototype.ENSENAME = function() {
    return this.getToken(TFGGramParser.ENSENAME, 0);
};

Tfg_intent_findContext.prototype.TIENES = function() {
    return this.getToken(TFGGramParser.TIENES, 0);
};

Tfg_intent_findContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGGramVisitor ) {
        return visitor.visitTfg_intent_find(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGGramParser.Tfg_intent_findContext = Tfg_intent_findContext;

TFGGramParser.prototype.tfg_intent_find = function() {

    var localctx = new Tfg_intent_findContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, TFGGramParser.RULE_tfg_intent_find);
    var _la = 0; // Token type
    try {
        this.state = 80;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case TFGGramParser.QUIERO:
            this.enterOuterAlt(localctx, 1);
            this.state = 51;
            this.match(TFGGramParser.QUIERO);
            this.state = 52;
            this.match(TFGGramParser.VER);
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGGramParser.LA) {
                this.state = 53;
                this.match(TFGGramParser.LA);
                this.state = 58;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 60;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TFGGramParser.SERIE || _la===TFGGramParser.PELICULA) {
                this.state = 59;
                this.tipo_contenido();
            }

            this.state = 62;
            this.titulo();
            break;
        case TFGGramParser.LA:
            this.enterOuterAlt(localctx, 2);
            this.state = 63;
            this.match(TFGGramParser.LA);
            this.state = 64;
            this.tipo_contenido();
            this.state = 65;
            this.titulo();
            break;
        case TFGGramParser.ENSENAME:
            this.enterOuterAlt(localctx, 3);
            this.state = 67;
            this.match(TFGGramParser.ENSENAME);
            this.state = 71;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TFGGramParser.LA) {
                this.state = 68;
                this.match(TFGGramParser.LA);
                this.state = 73;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 75;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TFGGramParser.SERIE || _la===TFGGramParser.PELICULA) {
                this.state = 74;
                this.tipo_contenido();
            }

            this.state = 77;
            this.titulo();
            break;
        case TFGGramParser.TIENES:
            this.enterOuterAlt(localctx, 4);
            this.state = 78;
            this.match(TFGGramParser.TIENES);
            this.state = 79;
            this.titulo();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function Tipo_contenidoContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGGramParser.RULE_tipo_contenido;
    return this;
}

Tipo_contenidoContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
Tipo_contenidoContext.prototype.constructor = Tipo_contenidoContext;

Tipo_contenidoContext.prototype.SERIE = function() {
    return this.getToken(TFGGramParser.SERIE, 0);
};

Tipo_contenidoContext.prototype.PELICULA = function() {
    return this.getToken(TFGGramParser.PELICULA, 0);
};

Tipo_contenidoContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGGramVisitor ) {
        return visitor.visitTipo_contenido(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGGramParser.Tipo_contenidoContext = Tipo_contenidoContext;

TFGGramParser.prototype.tipo_contenido = function() {

    var localctx = new Tipo_contenidoContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, TFGGramParser.RULE_tipo_contenido);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 82;
        _la = this._input.LA(1);
        if(!(_la===TFGGramParser.SERIE || _la===TFGGramParser.PELICULA)) {
        this._errHandler.recoverInline(this);
        }
        else {
        	this._errHandler.reportMatch(this);
            this.consume();
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function TituloContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGGramParser.RULE_titulo;
    return this;
}

TituloContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TituloContext.prototype.constructor = TituloContext;

TituloContext.prototype.TITULO = function() {
    return this.getToken(TFGGramParser.TITULO, 0);
};

TituloContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TFGGramVisitor ) {
        return visitor.visitTitulo(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TFGGramParser.TituloContext = TituloContext;

TFGGramParser.prototype.titulo = function() {

    var localctx = new TituloContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, TFGGramParser.RULE_titulo);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 84;
        this.match(TFGGramParser.TITULO);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function GeneroContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TFGGramParser.RULE_genero;
    return this;
}

GeneroContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
GeneroContext.prototype.constructor = GeneroContext;

GeneroContext.prototype.COMEDIA = function() {
    return this.getToken(TFGGramParser.COMEDIA, 0);
};

GeneroContext.prototype.MIEDO = function() {
    return this.getToken(TFGGramParser.MIEDO, 0);
};

GeneroContext.prototype.AVENTURA = function() {
    return this.getToken(TFGGramParser.AVENTURA, 0);
};

GeneroContext.prototype.DRAMA = function() {
    return this.getToken(TFGGramParser.DRAMA, 0);
};

GeneroContext.prototype.ACCION = function() {
    return this.getToken(TFGGramParser.ACCION, 0);
};

GeneroContext.prototype.ROMANTICA = function() {
    return this.getToken(TFGGramParser.ROMANTICA, 0);
};

GeneroContext.prototype.DEPORTES = function() {
    return this.getToken(TFGGramParser.DEPORTES, 0);
};

GeneroContext.prototype.DOCUMENTAL = function() {
    return this.getToken(TFGGramParser.DOCUMENTAL, 0);
};

GeneroContext.prototype.ENTRETENIMIENTO = function() {
    return this.getToken(TFGGramParser.ENTRETENIMIENTO, 0);
};
